# Chess_analysis_mcp

./: .gitignore  .mcp.json  README.md  Tintin's AI Chess Analysis.command  chess_mcp_implementation_plan.md  install.ps1  install.sh  pyproject.toml
.github/workflows/: release-app.yml  traffic-stats.yml
docs/: index.html  style.css
frontend/: index.html  main.js  styles.css
scripts/: build_app.sh  collect_traffic_stats.py  run_web.py  smoke_phase0.py  validate_phase2.py
server/: __init__.py  claude_bridge.py  config.py  doctor.py  mcp_server.py
server/core/: __init__.py  analysis_cache.py  app_liveness.py  chat_store.py  engine.py  evaluation.py  game_analysis.py  history.py  lichess.py  lifecycle.py  lines.py  multipgn.py  session.py  settings.py
server/web/: app.py  routes_board.py  routes_chat.py  routes_history.py  routes_settings.py  runner.py
tests/: test_engine.py  test_evaluation.py  test_game_analysis.py  test_history.py  test_lifecycle.py  test_settings.py
